--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="styles/modules.css">
 
     <script id="article-data" type="text/x-handlebars-template">
-      <!--TODO: Add a script tag to hold the Handlebars template.
+      <!--DONE: Add a script tag to hold the Handlebars template.
         - Be sure to give it a meaningful id attribute.
         - Insert placeholder keys.
         - If your object doesn't have values you need yet, you can add those properties in the model.-->
